--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "ca.h": "c",
         "stdio.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "type_traits": "c"
     }
 }
